# jove

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/release-notes/: unsigned-banner.md
.github/workflows/: ci.yml  release.yml
demos/mpe/: 01_mpe_pitch_glides.mid  02_mpe_pressure_swell.mid  03_mpe_timbre_sweep.mid  04_mpe_expressive_lead.mid  README.md  gen_mpe.py
docs/: index.html
docs/audio/: acid-lines.m4a  amb-ghost-choir.m4a  anthem.m4a  arp-trance.m4a  bass-growl.m4a  cascade.m4a  clav-machine.m4a  corrosion.m4a  drift.m4a  first-light.m4a  freeform.m4a  glass-garden.m4a  growler.m4a  interstate.m4a  keys-clav.m4a  lead-unison.m4a  low-tide.m4a  machine.m4a  neon-skyline.m4a  night-drive.m4a  pad-warm-analog.m4a  patched.m4a  peaks.json  pluck-bell.m4a  polymer.m4a  rush.m4a  seq-wobble.m4a  tape-loops.m4a  transit.m4a  vapour.m4a  vespers.m4a  warehouse.m4a  waveshift.m4a
packaging/macos/: build-zip.sh
src/: AuditionPhrases.h  JoveParams.h  PluginProcessor.cpp  PluginProcessor.h
src/dub/: Svf.h
src/engine/: AdsrEnv.h  Arpeggiator.h  BlepOsc.h  Chorus.h  MultibandSat.h  SynthConfig.h  SynthDelay.h  SynthEngine.cpp  SynthEngine.h  SynthLfo.h  SynthParams.h  SynthPhaser.h  SynthPresets.cpp  SynthPresets.h  SynthReverb.h  SynthSeq.h  Voice.h  VoiceFilter.h  WavetableOsc.h  Wavetables.h
src/presets/: PresetManager.cpp  PresetManager.h
src/ui/: WebEditor.cpp  WebEditor.h  WebKeyboardFocus.h  WebKeyboardFocus_mac.mm
tests/: engine_audit.cpp  param_roundtrip.cpp  preset_dump.cpp
ui/src/: app.jsx  index.html  jove-bridge.jsx  jove.css  juce-framework-frontend.js
